Don't error on AA0137, but check for new warnings.

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -67,6 +67,7 @@
   "enableCodeCop": true,
   "enableAppSourceCop": true,
   "enablePerTenantExtensionCop": true,
+  "checkForNewWarnings": true,
   "enableUICop": true,
   "enableCodeAnalyzersOnTestApps": true,
   "rulesetFile": "../../../src/rulesets/ruleset.json",
