[main@185a1a8] Update AL-Go System Files from jonasblunck/AL-Go@private - 408758b / Related to AB#539394

--- a/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -136,6 +136,8 @@ jobs:
 
       - name: Update AL-Go system files
         uses: jonasblunck/AL-Go/Actions/CheckForUpdates@private/jonasbl/warn
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           shell: powershell
           token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
