--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -67,7 +67,7 @@
   "enableCodeCop": true,
   "enableAppSourceCop": true,
   "enablePerTenantExtensionCop": true,
-  "checkForNewWarnings": true,
+  "failOnNewWarnings": true,
   "enableUICop": true,
   "enableCodeAnalyzersOnTestApps": true,
   "rulesetFile": "../../../src/rulesets/ruleset.json",
