[main@ab7eb8b] Update AL-Go System Files from jonasblunck/AL-Go@private - c1eddb6 / Related to AB#539394

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,6 +1,6 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/jonasblunck/AL-Go@private/jonasbl/warn",
+  "templateUrl": "https://github.com/jonasblunck/AL-Go@private/jonasbl/warn-feedback",
   "bcContainerHelperVersion": "preview",
   "runs-on": "windows-latest",
   "cacheImageName": "",
