--- a/.github/workflows/Troubleshooting.yaml
+++ b/.github/workflows/Troubleshooting.yaml
@@ -30,7 +30,7 @@ jobs:
           lfs: true
 
       - name: Troubleshooting
-        uses: jonasblunck/AL-Go/Actions/Troubleshooting@private/jonasbl/warn
+        uses: jonasblunck/AL-Go/Actions/Troubleshooting@private/jonasbl/warn-feedback
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
