[main@2cabf0c] Update AL-Go System Files from jonasblunck/AL-Go@private - f7b6c2c / Related to AB#539394

--- a/.github/workflows/Troubleshooting.yaml
+++ b/.github/workflows/Troubleshooting.yaml
@@ -30,7 +30,7 @@ jobs:
           lfs: true
 
       - name: Troubleshooting
-        uses: jonasblunck/AL-Go/Actions/Troubleshooting@private/jonasbl/warn-feedback
+        uses: jonasblunck/AL-Go/Actions/Troubleshooting@private/jonasbl/warn
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
