--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,6 +1,6 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/jonasblunck/AL-Go@private/jonasbl/warn-feedback",
+  "templateUrl": "https://github.com/jonasblunck/AL-Go@private/jonasbl/warn",
   "bcContainerHelperVersion": "preview",
   "runs-on": "windows-latest",
   "cacheImageName": "",
@@ -88,7 +88,7 @@
     ]
   },
   "UpdateALGoSystemFilesEnvironment": "Official-Build",
-  "templateSha": "aa2e43e624e46872fbff5a196e468609472726c1",
+  "templateSha": "f7b6c2cead8a3bbc7005891718d750871c853648",
   "commitOptions": {
     "messageSuffix": "Related to AB#539394",
     "pullRequestAutoMerge": true,
