--- a/.github/workflows/IncrementVersionNumber.yaml
+++ b/.github/workflows/IncrementVersionNumber.yaml
@@ -34,6 +34,9 @@ env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
   ALGoRepoSettings: ${{ vars.ALGoRepoSettings }}
 
+permissions:
+  contents: read
+
 jobs:
   IncrementVersionNumber:
     needs: [ ]
@@ -45,7 +48,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Dump Workflow Information
-        uses: jonasblunck/AL-Go/Actions/DumpWorkflowInfo@private/jonasbl/warn-feedback
+        uses: jonasblunck/AL-Go/Actions/DumpWorkflowInfo@private/jonasbl/warn
         with:
           shell: powershell
 
@@ -54,18 +57,18 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: jonasblunck/AL-Go/Actions/WorkflowInitialize@private/jonasbl/warn-feedback
+        uses: jonasblunck/AL-Go/Actions/WorkflowInitialize@private/jonasbl/warn
         with:
           shell: powershell
 
       - name: Read settings
-        uses: jonasblunck/AL-Go/Actions/ReadSettings@private/jonasbl/warn-feedback
+        uses: jonasblunck/AL-Go/Actions/ReadSettings@private/jonasbl/warn
         with:
           shell: powershell
 
       - name: Read secrets
         id: ReadSecrets
-        uses: jonasblunck/AL-Go/Actions/ReadSecrets@private/jonasbl/warn-feedback
+        uses: jonasblunck/AL-Go/Actions/ReadSecrets@private/jonasbl/warn
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -73,7 +76,7 @@ jobs:
           useGhTokenWorkflowForPush: '${{ github.event.inputs.useGhTokenWorkflow }}'
 
       - name: Increment Version Number
-        uses: jonasblunck/AL-Go/Actions/IncrementVersionNumber@private/jonasbl/warn-feedback
+        uses: jonasblunck/AL-Go/Actions/IncrementVersionNumber@private/jonasbl/warn
         with:
           shell: powershell
           token: ${{ steps.ReadSecrets.outputs.TokenForPush }}
@@ -84,7 +87,7 @@ jobs:
 
       - name: Finalize the workflow
         if: always()
-        uses: jonasblunck/AL-Go/Actions/WorkflowPostProcess@private/jonasbl/warn-feedback
+        uses: jonasblunck/AL-Go/Actions/WorkflowPostProcess@private/jonasbl/warn
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
